syntax ="proto3";
package users;


service  UserService{
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest{
    int32 id = 1;
}

message GetUserResponse{
    User user = 1;
}

message User{
    int32 id = 1;
    string name = 2;
}